// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataPickerRow should be rendered correctly 1`] = `
<div
  aria-posinset={1}
  className="pickerRow container -clickable align-items-center"
  onClick={[Function]}
  role="listitem"
>
  <div
    className="flexCell cell size-36 padding-24 padding-left-24 align-widgets-top"
    onClick={[Function]}
    role="cell"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="renderItem"
    >
      <div />
      <div
        className="flexSpacer"
      />
    </div>
  </div>
</div>
`;

exports[`DataPickerRow should be rendered correctly 2`] = `
<div
  aria-checked={true}
  aria-posinset={1}
  aria-selected={true}
  className="pickerRow -clickable uui-focus container -clickable align-items-center"
  onClick={[Function]}
  role="listitem"
>
  <div
    className="flexCell cell size-48 padding-24 padding-left-24 align-widgets-top"
    onClick={[Function]}
    role="cell"
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "0",
        "flexGrow": 1,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div
      className="renderItem"
    >
      <div />
      <div
        className="flexSpacer"
      />
      <div
        className="iconWrapper"
      >
        <div
          className="root icon-color-blue uui-button-box uui-enabled"
          href={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="container uui-icon uui-enabled"
            style={Object {}}
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#notification-done-18.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
